# agentbahn

./: AGENTS.md  README.md  db.sqlite3  manage.py  pyproject.toml
.agents/rules/: python-env-manager.md  tech-stack.md  test-tools.md  ui-backend-interactions.md
agentbahn/: __init__.py  api.py  asgi.py  codex_openai_client.py  dspy_lm.py  settings.py  urls.py  wsgi.py
agentbahn/codebase_agent/: __init__.py  agent.py  agent_old.py  api.py  environment.py  exceptions.py  observability.py  schemas.py  services.py  utils.py
agentbahn/codebase_agent/management/commands/: dspy_test.py  run_agent.py
agentbahn/llms/: __init__.py  admin.py  api.py  apps.py  models.py  openai_lm.py  schemas.py  services.py
agentbahn/llms/migrations/: 0001_initial.py  0002_encrypt_api_key.py  0003_llmconfiguration_lm_backend_path.py  0004_llmconfiguration_name.py
agentbahn/projects/: __init__.py  schemas.py
agentbahn_tui/: __init__.py  agents.py  apps.py  backend.py  cli.py  command_results.py  events.py  features.py  llm_commands.py  llms.py  project_events.py  projects.py  tasks.py  tui.py
agentbahn_tui/management/: __init__.py
agentbahn_tui/management/commands/: __init__.py  start_tui.py
tests/: conftest.py  test_codebase_agent_api.py  test_codex_openai_client.py  test_default_agent.py  test_dspy_lm.py  test_llms_api.py  test_openai_lm.py  test_tasks.py  test_tui_agents.py  test_tui_cli.py  test_tui_llms.py
