[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbahn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-click>=2.5.0",
    "dspy>=3.1.3",
    "httpx",
    "textual>=8.2.4",
]

[project.scripts]
agentbahn-tui = "agentbahn_tui.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "agentbahn.settings"

[tool.setuptools.packages.find]
include = ["agentbahn", "agentbahn.*", "agentbahn_tui", "agentbahn_tui.*"]
